fix(service): Minor fixes and improvements